Keep installation resolver tests warning-clean